# Flakes

./: flake.nix
templates/cpp/: .gitignore  CMakeLists.txt  flake.nix  readme.md
templates/cpp/src/: main.cpp
templates/default/: flake.nix
templates/elixir/: flake.nix
templates/rust/: flake.nix
